--- a/style.css
+++ b/style.css
@@ -20,6 +20,14 @@ body {
     background-position: center;
 }
 
+#back{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 120vh;
+    background-color: black;
+}
+
 .container {
     padding: 30px 10%;
     padding-left: 30px;
@@ -126,5 +134,50 @@ nav ul li a {
     font-size: 18vw;
     font-weight: 400;
     animation: 10s linear infinite;
-    animation-name: text;
+    animation-name: move-to-the-left;
+}
+
+@keyframes move-to-the-left{
+    from{
+        transform: translate(0%);
+    }
+    to{
+        transform: translate(-50.5%);
+    }
+}
+
+@keyframes move-to-the-right{
+    from{
+        transform: translate(0%);
+    }
+    to{
+        transform: translate(50.5%);
+    }
+}
+
+#one{
+    position: relative;
+    width: 100%;
+    height: 80vh;
+    background-color: #FFFEFE;
+}
+
+#helpingbrand{
+    padding: 10vw;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    color: #080808;
+}
+
+#helpingbrand h1{
+    font-weight: 400;
+    font-size: 2.5vw;
+}
+
+#helpingbrand p{
+    font-weight: 400;
+    font-size: 1.2vw;
+    line-height: 1.8vw;
+    letter-spacing: 0.08vw;
 }
